# snare-maker

./: .gitignore  CMakeLists.txt
Source/: BiquadFilter.h  EnvelopeEditor.cpp  EnvelopeEditor.h  EnvelopeModeToggle.h  FlexibleEnvelope.h  NoiseFilterVisualizer.cpp  NoiseFilterVisualizer.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
